@@ -1,5 +1,3 @@
-// /Users/forax/jdk/jdk-23.jdk/Contents/Home/bin/java --enable-preview src/main/java/_1_implicit_class.java
-
 //import module java.base;
 
 /*static*/ void main() {
